fix: resolve menu issue on mobiles

--- a/src/styles/layout/header.sass
+++ b/src/styles/layout/header.sass
@@ -52,6 +52,7 @@ $link__color: $header__color !important
 	margin: 0
 	padding: 0
 	gap: 8px
+	flex-wrap: wrap
 	list-style: none
 
 	// Adaptive
